--- a/source/RaylibTemplate.vcxproj
+++ b/source/RaylibTemplate.vcxproj
@@ -153,7 +153,15 @@ xcopy "$(SolutionDir)..\lib\vld\64-bit\Microsoft.DTfW.DHL.manifest" "$(OutDir)" 
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="cannon.cpp" />
+    <ClCompile Include="cannonball.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="seagull.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="cannon.h" />
+    <ClInclude Include="cannonball.h" />
+    <ClInclude Include="seagull.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
